--- a/glamyze/templates/my_admin/base.html
+++ b/glamyze/templates/my_admin/base.html
@@ -70,7 +70,7 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/home" aria-expanded="false">
+                <a class="sidebar-link" href="{% url 'order_management:order_view' %}" aria-expanded="false">
                     <span><i class="ti ti-clipboard-list"></i></span>
                     <span class="hide-menu">Orders</span>
                 </a>
