--- a/glamyze/templates/my_admin/add_offer.html
+++ b/glamyze/templates/my_admin/add_offer.html
@@ -30,7 +30,7 @@
         <!-- Discount Percentage -->
         <div class="col-md-6">
           <label for="discount_percentage" class="form-label">Discount Percentage</label>
-          <input type="number" step="0.01" class="form-control" id="discount_percentage" name="discount_percentage" value="{{ discount_percentage }}" required>
+          <input type="number" step="0.01" class="form-control" id="discount_percentage" min="0" max="100" name="discount_percentage" value="{{ discount_percentage }}" required>
         </div>
 
         <!-- Start Date -->
