--- a/glamyze/templates/user/orders.html
+++ b/glamyze/templates/user/orders.html
@@ -1,5 +1,5 @@
 {% extends 'user/account_layout.html' %}
-{% block orders_active4 %}active{% endblock %}
+{% block address_active4 %}active{% endblock %}
 {% block content %}
 
 <div class="card">
