--- a/glamyze/templates/user/user_dashboard.html
+++ b/glamyze/templates/user/user_dashboard.html
@@ -27,7 +27,7 @@
         </div>
         
         <!-- Account Overview Section -->
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <h5>Account Overview</h5>
           <div class="row">
             <div class="col-md-6">
@@ -45,7 +45,7 @@
                   <p class="card-text display-4">3</p>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="col-md-6">
               <div class="card text-center bg-light mb-3">
                 <div class="card-body">
@@ -62,21 +62,11 @@
   </div>
 </div>
 
-<!-- Custom CSS -->
 <style>
-  .card-header h5 {
-    font-size: 1.5rem;
-  }
-  .card-body h5 {
-    font-size: 1.25rem;
-    margin-bottom: 1rem;
-  }
+ 
   .display-4 {
     font-size: 2rem;
   }
-  .container-fluid {
-    padding-top: 20px;
-    max-width: 1000px;
-  }
+
 </style>
 {% endblock content %}
